@@ -19,7 +19,7 @@ plan tests => scalar(@tests);
 foreach my $test (@tests) {
     (my $junit = $test) =~ s{/tap/}{/tap/junit/};
 
-    my $rc = system(qq{ $^X -Ilib bin/tap2junit $test 2>/dev/null });
+    my $rc = system(qq{ $^X -Iblib/lib blib/script/tap2junit $test 2>/dev/null });
 
     my $outfile  = "$test.xml";
     my $received = slurp($outfile);
